@@ -1,3 +1,11 @@
+*gitlab-ce-9.0.1 (29 Mar 2017)
+
+  29 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.1.ebuild,
+  metadata.xml:
+  www-apps/gitlab-ce:  Added ebuild for Gitlab CE 9.0.1; this is the first one
+  with the gitaly USE flag; though that is not supported yet, it must therefore
+  be disabled at the moment.
+
   28 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.0.ebuild,
   gitlab-ce-9999.ebuild:
   www-apps/gitlab-ce:   Moved warning about MySQL migrations to the postinst
